@@ -9,9 +9,9 @@
   
   <body>
     <div id="header" style="background: black url('images/home.jpg') right;">
-      <h1><a href="matlab:web('http://dbm.neuro.uni-jena.de/','-browser');">Structural Brain Mapping Group</a></h1>
+      <h1><a href="matlab:web('http://www.neuro.uni-jena.de/','-browser');">Structural Brain Mapping Group</a></h1>
       <p>
-          <a href="matlab:web('http://dbm.neuro.uni-jena.de/people/christian-gaser','-browser');">Christian Gaser</a> |
+          <a href="matlab:web('http://www.neuro.uni-jena.de/people/christian-gaser','-browser');">Christian Gaser</a> |
           <a href="matlab:web('http://www.neuro.uniklinikum-jena.de','-browser');">Department of Neurology</a> | 
           <a href="matlab:web('http://www.psychiatrie.uniklinikum-jena.de','-browser');">Department of Psychiatry</a> | 
           <a href="matlab:web('http://www.uni-jena.de/en/start_en.html','-browser');">University of Jena</a>
@@ -24,7 +24,7 @@
   
     <div id="content">
       <br />
-      <p align="center" style="text-align:center;">This is <b>CAT12 r933 (2016-04-25)</b><br />You can update your copy of CAT12 here: <a href="matlab:spm('alert',evalc('cat_update(1)'),'CAT Update');">Check for update</a>.<br />If you happen to find any bug, please report them at <a href="mailto:vbmweb@gmail.com">vbmweb@gmail.com</a>.</p>
+      <p align="center" style="text-align:center;">This is <b>CAT12 r962 (2016-06-24)</b><br />You can update your copy of CAT12 here: <a href="matlab:spm('alert',evalc('cat_update(1)'),'CAT Update');">Check for update</a>.<br />If you happen to find any bug, please report them at <a href="mailto:vbmweb@gmail.com">vbmweb@gmail.com</a>.</p>
       <h1 style="text-align:center;"><img src="images/CAT.png" width=40% height=auto alt="CAT" ></h1>
 
       <hr />
